# Lumora

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/src/: config.py  main.py
backend/src/agents/: research_graph.py  state.py
backend/src/agents/nodes/: critique_node.py  refine_node.py  research_node.py  synthesize_node.py  tools_node.py
backend/src/agents/prompts/: critique.py  refine.py  research.py
backend/src/api/: deps.py  router.py
backend/src/api/v1/: chat.py  documents.py  graph.py  health.py  research.py  timeline.py
backend/src/knowledge_graph/: builder.py  client.py  schema.py
backend/src/mcp_servers/: arxiv_server.py  filesystem_server.py  web_search_server.py  wikipedia_server.py
backend/src/models/: chat.py  document.py  graph.py  research.py
backend/src/rag/: chunker.py  embedder.py  ingestion.py  pipeline.py  reranker.py  retriever.py  store.py
backend/src/services/: job_store.py  llm_factory.py  timeline.py
backend/src/utils/: logging.py  pdf.py  text.py
backend/tests/: conftest.py
docs/: api-reference.md  architecture.md
frontend/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts  documents.ts  graph.ts  research.ts
frontend/src/lib/: constants.ts  graph-layout.ts
frontend/src/stores/: chatStore.ts  documentStore.ts  graphStore.ts  researchStore.ts  settingsStore.ts
frontend/src/types/: api.ts
(+23 files in other folders)
